samples/_failures_safe/1761283677_2450c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ac456bd.c: In function ‘main’:
./samples/SAFE/__tmp_8ac456bd.c:154:17: error: expected declaration or statement at end of input
  154 |                 }
      |                 ^
./samples/SAFE/__tmp_8ac456bd.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8ac456bd.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8ac456bd.c:154:17: error: expected declaration or statement at end of input
